# langchain-RAG

./: .env.example  .gitignore  API_EXAMPLES.md  README.md  agent.py  app.py  enforce.py  pyproject.toml  utility.py
RAG/: main.py
RAG/augmentation/: __init__.py  augment.py
RAG/ingestion/: ingest_to_pinecone.py
RAG/retrieval/: retrieve_from_pinecone.py
agent/: __init__.py  agent_factory.py
config/: __init__.py  settings.py
models/: __init__.py  ollama_model.py
prompts/: __init__.py  templates.py
schemas/: __init__.py  response.py
tools/: __init__.py  search.py
